--- a/configure.ac
+++ b/configure.ac
@@ -31,6 +31,10 @@ PKG_PROG_PKG_CONFIG([0.22])
 GLIB_GSETTINGS
 GOBJECT_INTROSPECTION_REQUIRE([1.35.9])
 
+GNOME_POCKET_INIT([
+  gir
+])
+
 PKG_CHECK_MODULES([DEPS], [gdk-3.0
                            gdk-pixbuf-2.0
                            gio-2.0
@@ -45,6 +49,7 @@ AC_SUBST(GLIB_COMPILE_RESOURCES)
 
 AC_OUTPUT([
   Makefile
+  gnome-pocket/Makefile
   data/Makefile
   data/icons/Makefile
   src/Makefile
